Added proxy support for slack incoming webhook

--- a/cx_health_mon_config.json
+++ b/cx_health_mon_config.json
@@ -60,7 +60,9 @@
             {
                 "systemType": "slack",
                 "name": "Slack",
-                "hook" : "https://hooks.slack.com/services/xxxxxxxxxxxxxxxxxxx"
+                "hook" : "https://hooks.slack.com/services/xxxxxxxxxxxxxxxxxxx",
+		"proxy" : "",
+		"proxyCreds": ""
             }
         ]
     },
